# srg_absolyut

./: Makefile  README.md  pyproject.toml
scripts/: main.py  products.db  work_in_db.py
