[tool.poetry]
name = "srg-absolyut"
version = "0.1.0"
description = ""
authors = ["Pe7r0v14 <davydovpetrvladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
